# test-report

./: .dockerignore  .gitignore  CONFIG.md  Dockerfile  INSTALLING.md  Makefile  README.md  docker-entrypoint.sh  local.env  pyproject.toml  setup.cfg
app/: conf.py  entities.py  exceptions.py  interfaces.py  logger.py  main.py  routers.py  utils.py
app/adapters/: __init__.py  mail.py  report.py  user.py
app/drivers/: __init__.py  mail.py  rest_client.py  user_info.py
tests/: conftest.py  constants.py  fixtures.py  local.env  test_views.py
tests/reports/source/: bad.csv  good.csv
