[tool.poetry]
name = "test-report"
version = "0.1.0"
description = ""
authors = ["BigBag Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.74.0,<0.75.0"
uvicorn = ">=0.17.0,<0.18.0"
httpx = ">=0.22.0,<0.23.0"
datadog = "^0.43.0"
json-logging = "^1.3.0"
pygelf = "^0.4.2"
pydantic = "^1.9.0"
email-validator = "^1.1.3"
pydantic-vault = "^0.7.1"
hvac = "^0.11.2"
python-multipart = "^0.0.5"
pyminizip = "^0.2.6"
pandas = "^1.4.1"
XlsxWriter = "^3.0.3"
starlette-prometheus = "^0.9.0"
sentry-sdk = "^1.14.0"
arq = "^0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^22.3.0"
isort = "^5.9.3"
python-dotenv = {version = "^0.19.0", extras = ["cli"]}
pytest-cov = "^2.12.1"
types-mock = "^4.0.3"
mock = "^4.0.3"
pytest-mock = "^3.6.1"
faker = "^13.3.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = 'build\/|buck-out\/|dist\/|_build\/|.git\/|.hg\/|.mypy_cache\/|.tox\/|.venv\/|migrations\/'
